# bevy_template

./: Cargo.toml
.cargo/: config.toml
src/: camera.rs  constant.rs  inspector.rs  main.rs
