[package]
name = "shadergame"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7", features = ["trace"] }
bevy_kira_audio = { version = "0.9", features = ["ogg", "wav"] }
bevy-inspector-egui = "0.10"
serde = "1.0"
ron = "0.7"
rand = "0.8"
